--- a/app/src/main/res/drawable/login_box.xml
+++ b/app/src/main/res/drawable/login_box.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="7dp" />
+        android:radius="12dp" />
 
     <solid
-        android:color="#191919" />
+        android:color="@color/loginBoxColor" />
 </shape>
