--- a/app/src/main/res/drawable/settings_edittext.xml
+++ b/app/src/main/res/drawable/settings_edittext.xml
@@ -6,5 +6,5 @@
         android:radius="25dp" />
 
     <solid
-        android:color="@color/chatEdittextColor" />
+        android:color="@color/configEdittextColor" />
 </shape>
