--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,20 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroundColor">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/connectionTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="22dp"
-            android:paddingTop="10dp"
+            android:layout_marginTop="10dp"
             android:text="Connection"
             android:textColor="@color/foregroundColor"
             android:textSize="18dp"
@@ -26,9 +31,8 @@
             android:id="@+id/serverIpText"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginStart="14dp"
             android:layout_marginTop="11dp"
-            android:background="@drawable/chat_edittext"
+            android:background="@drawable/settings_edittext"
             android:ems="10"
             android:hint="Default IP Address"
             android:inputType="text"
@@ -42,9 +46,8 @@
             android:id="@+id/serverPortText"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginStart="14dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/chat_edittext"
+            android:background="@drawable/settings_edittext"
             android:ems="10"
             android:hint="Default port"
             android:inputType="numberDecimal|numberSigned"
@@ -60,7 +63,7 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
         android:src="@android:drawable/ic_input_add"
