--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/activityLinearLayout"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:background="@color/activityBottomBarColor"
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/buttonChat"
+            android:id="@+id/activityButtonChat"
             android:layout_width="@dimen/tab_icon_size"
             android:layout_height="@dimen/tab_icon_size"
             android:layout_marginHorizontal="50dp"
@@ -28,7 +28,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <ImageView
-            android:id="@+id/buttonSettings"
+            android:id="@+id/activityButtonSettings"
             android:layout_width="@dimen/tab_icon_size"
             android:layout_height="@dimen/tab_icon_size"
             android:layout_marginHorizontal="50dp"
@@ -37,7 +37,7 @@
             tools:ignore="TouchTargetSizeCheck" />
 
         <ImageView
-            android:id="@+id/buttonLogin"
+            android:id="@+id/activityButtonLogin"
             android:layout_width="@dimen/tab_icon_size"
             android:layout_height="@dimen/tab_icon_size"
             android:layout_marginHorizontal="50dp"
@@ -48,12 +48,11 @@
     </LinearLayout>
 
     <View
-        android:id="@+id/division"
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:layout_weight="1"
         android:background="@color/primaryColor"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/activityLinearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,21 +60,21 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <View
-        android:id="@+id/selectionTab"
+        android:id="@+id/activitySelectionTab"
         android:layout_width="60dp"
         android:layout_height="3dp"
         android:layout_marginBottom="2dp"
-        android:background="@drawable/fragment_selector"
+        android:background="@drawable/fragment_selector_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
+        android:id="@+id/activityFragmentContainerView"
         android:name="yybos.hash.katarakt2.WelcomeFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/activityLinearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
