--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
     android:background="@color/backgroundColor">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/configLinearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/connectionTextView"
+            android:id="@+id/configConnectionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -28,11 +28,11 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/serverIpText"
+            android:id="@+id/configServerIpText"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginTop="11dp"
-            android:background="@drawable/settings_edittext"
+            android:background="@drawable/settings_edittext_shape"
             android:ems="10"
             android:hint="Default IP Address"
             android:inputType="text"
@@ -43,11 +43,11 @@
             android:textSize="14dp" />
 
         <EditText
-            android:id="@+id/serverPortText"
+            android:id="@+id/configServerPortText"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/settings_edittext"
+            android:background="@drawable/settings_edittext_shape"
             android:ems="10"
             android:hint="Default port"
             android:inputType="numberDecimal|numberSigned"
@@ -60,7 +60,7 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/configFloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
