--- a/app/src/main/res/drawable/chat_shape.xml
+++ b/app/src/main/res/drawable/chat_shape.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="12dp" />
+        android:radius="8dp" />
 
     <solid
-        android:color="@color/loginBoxColor" />
+        android:color="@color/chatShapeColor" />
 </shape>
