--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,14 +14,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/login_box">
+        android:background="@drawable/login_shape">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">
             <TextView
-                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sex Penis"
@@ -30,26 +29,28 @@
                 android:layout_marginBottom="12dp"/>
 
             <EditText
+                android:id="@+id/loginUsernameEdittext"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:hint="Username"
                 android:textColorHint="@color/loginEdittextHintColor"
                 android:textSize="14sp"
-                android:background="@drawable/login_edittext"
+                android:background="@drawable/login_edittext_shape"
                 android:paddingHorizontal="16dp"
                 android:layout_marginBottom="5dp"/>
             <EditText
+                android:id="@+id/loginPasswordEdittext"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:hint="Password"
                 android:textColorHint="@color/loginEdittextHintColor"
                 android:textSize="14sp"
-                android:background="@drawable/login_edittext"
+                android:background="@drawable/login_edittext_shape"
                 android:paddingHorizontal="16dp"
                 android:layout_marginBottom="15dp"/>
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/loginButton"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
                 android:text="Login"
@@ -57,7 +58,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/loginButtonTextColor"
                 android:textSize="15sp"
-                android:background="@drawable/login_button"/>
+                android:background="@drawable/login_button_shape"/>
         </LinearLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
