--- a/app/src/main/res/layout/layout_chat.xml
+++ b/app/src/main/res/layout/layout_chat.xml
@@ -2,27 +2,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/chatConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="5dp"
+    android:padding="8dp"
+    android:background="@drawable/chat_shape">
 
     <TextView
+        android:id="@+id/chatDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
-        android:text="Welcome"
-        android:textColor="@color/foregroundColor"
-        app:layout_constraintBottom_toTopOf="@+id/welcomeImageView"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Date"
+        android:textColor="@color/chatDateTextViewColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/welcomeImageView"
+    <TextView
+        android:id="@+id/chatName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Chat name something like that"
+        android:textColor="@color/chatNameTextViewColor"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/welcome_img" />
+        app:layout_constraintTop_toBottomOf="@+id/chatDate" />
 </androidx.constraintlayout.widget.ConstraintLayout>
