--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,11 +18,11 @@
     <color name="activityBottomBarColor">@color/secondaryColor</color>
 
     <color name="loginEdittextColor">@color/edittextColor</color>
-    <color name="loginEdittextHintColor">#7A7A7A</color>
+    <color name="loginEdittextHintColor">#8A7E7E7E</color>
     <color name="loginTextViewColor">#C2C2BA</color>
     <color name="loginButtonTextColor">#C2C2BA</color>
     <color name="loginButtonColor">@color/edittextColor</color>
-    <color name="loginBoxColor">#242C3E</color>
+    <color name="loginShapeColor">#242C3E</color>
 
     <color name="chatEdittextColor">@color/edittextColor</color>
     <color name="chatEdittextHintColor">#7A7A7A</color>
@@ -30,4 +30,15 @@
     <color name="configTextViewColor">#C2C2BA</color>
     <color name="configEdittextColor">@color/edittextColor</color>
     <color name="configEdittextHintColor">#7A7A7A</color>
+
+    <color name="popupErrorShapeColor">#4D242C3E</color>
+    <color name="popupErrorTextViewColor">@color/textViewColor</color>
+    <color name="popupErrorButtonColor">@color/edittextColor</color>
+    <color name="popupErrorButtonTextColor">@color/textViewColor</color>
+
+    <color name="chatsListShapeColor">#202839</color>
+    <color name="chatShapeColor">#2B364C</color>
+    <color name="chatDateTextViewColor">#7A7A7A</color>
+    <color name="chatNameTextViewColor">@color/textViewColor</color>
+
 </resources>
