added the register box changed some thing on the login fragment layout

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,57 +8,25 @@
     tools:context=".Fragments.LoginFragment">
 
     <FrameLayout
+        android:id="@+id/loginFrameLayout"
         android:layout_width="300dp"
         android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/login_shape">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sex Penis"
-                android:textColor="@color/loginTextViewColor"
-                android:textSize="20sp"
-                android:layout_marginBottom="12dp"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
-                android:id="@+id/loginUsernameEdittext"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:hint="Username"
-                android:textColorHint="@color/loginEdittextHintColor"
-                android:textSize="14sp"
-                android:background="@drawable/login_edittext_shape"
-                android:paddingHorizontal="16dp"
-                android:layout_marginBottom="5dp"/>
-            <EditText
-                android:id="@+id/loginPasswordEdittext"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:hint="Password"
-                android:textColorHint="@color/loginEdittextHintColor"
-                android:textSize="14sp"
-                android:background="@drawable/login_edittext_shape"
-                android:paddingHorizontal="16dp"
-                android:layout_marginBottom="15dp"/>
 
-            <Button
-                android:id="@+id/loginButton"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:text="Login"
-                android:textStyle="normal"
-                android:textAllCaps="false"
-                android:textColor="@color/loginButtonTextColor"
-                android:textSize="15sp"
-                android:background="@drawable/login_button_shape"/>
-        </LinearLayout>
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/loginSwitchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Don't have an account yet? What a crime"
+        android:textColor="#3A52EC"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginFrameLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
