uh I really forgot to commit things as I was going, so there is a lot of changes
mainly:
changed the way messages were sent
the way they were parsed
the way it adds messages to the chat
the way it receives chats
added a progressBar to the chats layout
fixed some bugs
the login and register box now say "Login" and "Register" instead of "Sex Penis" (Red pilled layout)
Now it puts a message in the chat when the client disconnects
Login is finally working, register as well
maybe some other things that I forgot about

--- a/app/src/main/res/layout/layout_chats_list.xml
+++ b/app/src/main/res/layout/layout_chats_list.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:background="@drawable/chats_list_shape"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -17,17 +18,31 @@
             android:id="@+id/chatsClose"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:layout_marginTop="7dp"
             android:layout_marginStart="7dp"
+            android:layout_marginTop="7dp"
             android:src="@drawable/x_icon" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/chatsProgressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateTint="#FFFFFF"
+        android:progressTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.65"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
