added a custom toast message when you connect to the server the custom toast message appears on the top

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,4 +80,12 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout="@layout/fragment_welcome" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/customToastFragmentView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
