changed the settings layout and some other bullshitssssss

--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="25dp" />
+        android:radius="20dp" />
 
     <solid
-        android:color="@color/chatEdittextColor" />
+        android:color="@color/buttonColor" />
 </shape>
