--- a/app/src/main/res/layout/layout_login_box.xml
+++ b/app/src/main/res/layout/layout_login_box.xml
@@ -28,7 +28,7 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/login_edittext_shape"
+            android:background="@drawable/edittext_shape"
             android:hint="Email"
             android:text="yybos.hash@gmail.com"
             android:paddingHorizontal="16dp"
@@ -40,7 +40,7 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/login_edittext_shape"
+            android:background="@drawable/edittext_shape"
             android:hint="Password"
             android:text="123"
             android:paddingHorizontal="16dp"
@@ -51,7 +51,7 @@
             android:id="@+id/loginButton"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:background="@drawable/login_button_shape"
+            android:background="@drawable/button_shape"
             android:text="Login"
             android:textAllCaps="false"
             android:textColor="@color/loginButtonTextColor"
