--- a/app/src/main/res/drawable/edittext_shape.xml
+++ b/app/src/main/res/drawable/edittext_shape.xml
@@ -6,5 +6,5 @@
         android:radius="25dp" />
 
     <solid
-        android:color="@color/configEdittextColor" />
+        android:color="@color/edittextColor" />
 </shape>
