--- a/app/src/main/res/drawable/input_popup_shape.xml
+++ b/app/src/main/res/drawable/input_popup_shape.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="25dp" />
+        android:radius="8dp" />
 
     <solid
-        android:color="@color/loginEdittextColor" />
+        android:color="@color/backgroundColor3" />
 </shape>
