--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -23,35 +23,44 @@
             android:layout_height="match_parent" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/chatEditText"
-        android:layout_width="@dimen/chat_edittext_width"
-        android:layout_height="@dimen/chat_edittext_height"
-        android:layout_marginVertical="5dp"
-        android:background="@drawable/chat_edittext_shape"
-        android:ems="10"
-        android:hint="@string/chatEdittext"
-        android:textColorHint="@color/chatEdittextHintColor"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:paddingHorizontal="12dp"
-        android:paddingVertical="5dp"
-        android:singleLine="false"
-        android:textSize="14sp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <ImageView
-        android:id="@+id/chatSendButton"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="6dp"
-        android:src="@drawable/send_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <EditText
+            android:id="@+id/chatEditText"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/chat_edittext_height"
+            android:layout_weight="1"
+            android:background="@drawable/edittext_shape"
+            android:ems="10"
+            android:hint="@string/chatEdittext"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:layout_marginStart="10dp"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="5dp"
+            android:singleLine="false"
+            android:textColorHint="@color/chatEdittextHintColor"
+            android:textSize="14sp"
+            android:layout_gravity="center"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+
+        <ImageView
+            android:id="@+id/chatSendButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_gravity="center_vertical|end"
+            android:padding="8dp"
+            android:background="@drawable/chat_buttons_shape"
+            android:src="@drawable/send_icon" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/chatChatsButton"
