--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,73 +2,39 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/configConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundColor">
 
     <LinearLayout
-        android:id="@+id/configLinearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/configConnectionTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Connection"
-            android:textColor="@color/foregroundColor"
-            android:textSize="18dp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/configServerIpText"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="11dp"
-            android:background="@drawable/settings_edittext_shape"
-            android:ems="10"
-            android:hint="Default IP Address"
-            android:inputType="text"
-            android:paddingStart="12dp"
-            android:singleLine="true"
-            android:textColor="@color/foregroundColor"
-            android:textColorHint="@color/configEdittextHintColor"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/configServerPortText"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/settings_edittext_shape"
-            android:ems="10"
-            android:hint="Default port"
-            android:inputType="numberDecimal|numberSigned"
-            android:paddingStart="12dp"
-            android:singleLine="true"
-            android:textColor="@color/foregroundColor"
-            android:textColorHint="@color/configEdittextHintColor"
-            android:textSize="14dp" />
-
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/configRecyclerView"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/configFloatingActionButton"
+        android:id="@+id/configFloatingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:clickable="true"
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="@color/secondaryColor"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="TODO" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
