--- a/app/src/main/res/layout/layout_popup_error.xml
+++ b/app/src/main/res/layout/layout_popup_error.xml
@@ -42,7 +42,7 @@
                 android:id="@+id/popupErrorFirstButton"
                 android:layout_width="250dp"
                 android:layout_height="45dp"
-                android:background="@drawable/popup_error_button_shape"
+                android:background="@drawable/button_shape"
                 android:textStyle="normal"
                 android:textAllCaps="false"
                 android:textColor="@color/textViewColor"
@@ -52,7 +52,7 @@
                 android:id="@+id/popupErrorSecondButton"
                 android:layout_width="250dp"
                 android:layout_height="45dp"
-                android:background="@drawable/popup_error_button_shape"
+                android:background="@drawable/button_shape"
                 android:textStyle="normal"
                 android:textAllCaps="false"
                 android:textColor="@color/textViewColor"/>
