--- a/app/src/main/res/layout/layout_register_box.xml
+++ b/app/src/main/res/layout/layout_register_box.xml
@@ -28,7 +28,7 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/login_edittext_shape"
+            android:background="@drawable/edittext_shape"
             android:hint="Email"
             android:paddingHorizontal="16dp"
             android:textColorHint="@color/loginEdittextHintColor"
@@ -39,7 +39,7 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/login_edittext_shape"
+            android:background="@drawable/edittext_shape"
             android:hint="Password"
             android:paddingHorizontal="16dp"
             android:textColorHint="@color/loginEdittextHintColor"
@@ -50,7 +50,7 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginBottom="15dp"
-            android:background="@drawable/login_edittext_shape"
+            android:background="@drawable/edittext_shape"
             android:hint="Username"
             android:paddingHorizontal="16dp"
             android:textColorHint="@color/loginEdittextHintColor"
@@ -60,7 +60,7 @@
             android:id="@+id/registerButton"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:background="@drawable/login_button_shape"
+            android:background="@drawable/button_shape"
             android:text="Register"
             android:textAllCaps="false"
             android:textColor="@color/loginButtonTextColor"
