now the LoginFragment is the SettingsFragment and the SettingsFragment is now the LoginFragment well, it makes much more sense now

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -20,8 +20,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/configRecyclerView"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"/>
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
