--- a/app/src/main/res/layout/layout_chats_list.xml
+++ b/app/src/main/res/layout/layout_chats_list.xml
@@ -22,12 +22,23 @@
             android:layout_marginTop="7dp"
             android:src="@drawable/x_icon" />
 
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chats"
+            android:textColor="@color/textViewColor"
+            android:textSize="9pt"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="15dp"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp" />
     </LinearLayout>
@@ -45,4 +56,5 @@
         app:layout_constraintHorizontal_bias="0.65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
