--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="chat_edittext_height">40dp</dimen>
     <dimen name="chat_edittext_width">280dp</dimen>
     <dimen name="chat_edittext_width_expanded">320dp</dimen>
+
+    <dimen name="toggle_circle_size">20dp</dimen>
+    <dimen name="toggle_corner">15dp</dimen>
 </resources>
