--- a/app/src/main/res/layout/layout_chat.xml
+++ b/app/src/main/res/layout/layout_chat.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chatConstraintLayout"
+    android:minWidth="125dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="5dp"
@@ -13,7 +14,7 @@
         android:id="@+id/chatDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Date"
+        android:text=""
         android:textColor="@color/chatDateTextViewColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +23,7 @@
         android:id="@+id/chatName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chat name something like that"
+        android:text="If you are seeing this, something has gone completely wrong"
         android:textColor="@color/chatNameTextViewColor"
         android:textSize="18sp"
         android:textStyle="bold"
