--- a/app/src/main/res/layout/layout_chats_list.xml
+++ b/app/src/main/res/layout/layout_chats_list.xml
@@ -14,13 +14,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/chatsClose"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="7dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginHorizontal="7dp"
             android:layout_marginTop="7dp"
-            android:src="@drawable/x_icon" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/chatsClose"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/x_icon" />
+
+            <ImageView
+                android:id="@+id/chatsAdd"
+                android:layout_gravity="end"
+                android:layout_marginStart="190dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/plus_icon"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView"
