--- a/app/src/main/res/layout/layout_input_popup.xml
+++ b/app/src/main/res/layout/layout_input_popup.xml
@@ -33,7 +33,7 @@
             android:text="The server is gently asking you for an username." />
 
         <EditText
-            android:id="@+id/inputPopupUsername"
+            android:id="@+id/inputPopupEdittext"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginBottom="15dp"
