--- a/app/src/main/res/layout/layout_server.xml
+++ b/app/src/main/res/layout/layout_server.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:name="yybos.hash.katarakt2.Fragments.CustomToggleFragment"
+                android:name="yybos.hash.katarakt2.Fragments.Custom.CustomToggleFragment"
                 tools:layout="@layout/custom_toggle"/>
 
             <TextView
